#16 Added homepage block content and rendered all posts

--- a/templates/home.html
+++ b/templates/home.html
@@ -6,7 +6,7 @@
 <div class="container pt-5 text-center">
   {% for post in all_posts %}
 
-  <p>{{post.title}}</p>
+  <p class="text-black">{{post.title}}</p>
 
   {% endfor %}
 </div>
