--- a/templates/base.html
+++ b/templates/base.html
@@ -78,6 +78,12 @@
       </nav>
     </header>
 
+    <main class="flex-grow-1 container">
+      {% block content %}
+      <!-- Content Goes here -->
+      {% endblock content %}
+    </main>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
