--- a/templates/base.html
+++ b/templates/base.html
@@ -46,7 +46,7 @@
         <div class="collapse navbar-collapse" id="navbarText">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="">Home</a>
+              <a class="navbar-brand" href="{% url 'home' %}">COOLCODERS</a>
             </li>
 
             <li class="nav-item dropdown">
@@ -66,13 +66,22 @@
                 </ul>
               </div>
             </li>
+          </ul>
 
+          <ul class="navbar-nav mb-2 mb-lg-0">
+            {% if user.is_authenticated %}
             <li class="nav-item">
-              <a class="nav-link" href="">Register</a>
+              <a class="nav-link" href="{% url 'account_logout' %}">Logout</a>
+            </li>
+
+            {% else %}
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'account_signup' %}">Register</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="">Login</a>
+              <a class="nav-link" href="{% url 'account_login' %}">Login</a>
             </li>
+            {% endif %}
           </ul>
         </div>
       </nav>
