--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
       crossorigin="anonymous"
     />
 
-    <link rel="stylesheet" href="{% static 'css/style.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
   </head>
   <body class="d-flex flex-column h-100">
     <!-- Navigation -->
@@ -46,7 +46,9 @@
         <div class="collapse navbar-collapse" id="navbarText">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="navbar-brand" href="{% url 'home' %}">COOLCODERS</a>
+              <a class="nav-link" aria-current="page" href="{% url 'home' %}"
+                >Home</a
+              >
             </li>
 
             <li class="nav-item dropdown">
@@ -61,11 +63,15 @@
                 </button>
                 <ul class="dropdown-menu">
                   <li>
-                    <a class="dropdown-item" href="">Tech</a>
+                    <a class="dropdown-item" href=""
+                      >Tech</a
+                    >
                   </li>
                 </ul>
               </div>
             </li>
+
+         
           </ul>
 
           <ul class="navbar-nav mb-2 mb-lg-0">
