--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,3 +1,8 @@
 :root {
-  --neon-purple: rgb(171, 32, 253);
+  --primary-light: #f5f5f5;
+  --primary-grey: #d2d7d3;
+  --primary-black: #212529;
+  --neon-green: #3bc20e;
+  --neon-purple: #ab20fd;
+  --primary-blue: #48abe0;
 }
