--- a/templates/home.html
+++ b/templates/home.html
@@ -8,7 +8,7 @@
 
   {% for post in trending_posts %}
 
-  <p class="text-black">{{post.title}}</p>
+  {% include "includes/single-post.html" %}
 
   {% endfor %}
 </div>
