--- a/templates/includes/single-post.html
+++ b/templates/includes/single-post.html
@@ -30,6 +30,10 @@
     </ul>
     <ul class="list-inline border-bottom">
       <li class="list-inline-item">
+        <i class="fa-solid fa-sitemap text-purple"></i>
+        <span class="text-capitalize">{{ post.category }}</span>
+      </li>
+      <li class="list-inline-item">
         <i class="fa-solid fa-thumbs-up text-primary"></i>
         {{ post.number_of_likes }}
       </li>
