--- a/templates/category.html
+++ b/templates/category.html
@@ -20,23 +20,40 @@
     </div>
     
     <!-- Page Pagination -->
-    <div class="pagination">
-        <span class="step-links">
-            {% if page_obj.has_previous %}
-                <a href="?page=1">&laquo; first</a>
-                <a href="?page={{ page_obj.previous_page_number }}">previous</a>
-            {% endif %}
-    
-            <span class="current">
-                Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
-            </span>
-    
-            {% if page_obj.has_next %}
-                <a href="?page={{ page_obj.next_page_number }}">next</a>
-                <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
-            {% endif %}
-        </span>
-    </div>
+    <nav aria-label="Page navigation">
+        <ul class="pagination justify-content-center">
+          {% if page_obj.has_previous %}
+          <li class="page-item">
+            <a href="?page=1" class="page-link">&laquo; First</a>
+          </li>
+          <li class="page-item">
+            <a href="?page={{ page_obj.previous_page_number }}" class="page-link"
+              >&lt; Previous</a
+            >
+          </li>
+          {% endif %}
+  
+          <!-- Display individual page numbers -->
+          {% for page_num in page_obj.paginator.page_range %}
+          <li
+            class="page-item{% if page_num == page_obj.number %} active{% endif %}"
+          >
+            <a href="?page={{ page_num }}" class="page-link">{{ page_num }}</a>
+          </li>
+          {% endfor %} {% if page_obj.has_next %}
+          <li class="page-item">
+            <a href="?page={{ page_obj.next_page_number }}" class="page-link"
+              >Next &gt;</a
+            >
+          </li>
+          <li class="page-item">
+            <a href="?page={{ page_obj.paginator.num_pages }}" class="page-link"
+              >Last &raquo;</a
+            >
+          </li>
+          {% endif %}
+        </ul>
+      </nav>
   </div>
 </div>
 
