Renamed single-post.html and added post snippet.html

--- a/templates/home.html
+++ b/templates/home.html
@@ -8,7 +8,7 @@
 
   {% for post in trending_posts %}
 
-  {% include "includes/single-post.html" %}
+  {% include "includes/post-preview.html" %}
 
   {% endfor %}
 </div>
