--- a/templates/category.html
+++ b/templates/category.html
@@ -13,7 +13,7 @@
     <div class="row p-3">
       {% for post in posts %}
       <div class="col-md-4 g-3 mt-3 mb-3">
-        {% include "includes/single-post.html" %}
+        {% include "includes/post-preview.html" %}
       </div>
 
       {% endfor %}
