--- a/templates/home.html
+++ b/templates/home.html
@@ -25,7 +25,7 @@
 
 
     <div class="col-lg-4 mb-5">
-      <h2 class="article-title">
+      <h2 class="text-purple">
         <strong><em>Popular Post</em></strong>
       </h2>
       {% for post in popular_post %} 
