--- a/templates/includes/post-snippet.html
+++ b/templates/includes/post-snippet.html
@@ -18,7 +18,7 @@
           >
         </h3>
         <ul class="list-inline">
-          <li class="list-inline-item">
+          <li class="list-inline-item mb-1">
             <i class="fa-solid fa-user text-info"></i>
             <a href="#">
               <strong class="text-capitalize"> {{post.author}}</strong>
