--- a/templates/home.html
+++ b/templates/home.html
@@ -6,7 +6,7 @@
 <div class="container pt-5 text-center">
   <div class="row pt-md-5">
     <div class="col-lg-4 mb-5">
-      <h2 class="text-purple">
+      <h2 class="text-green">
         <strong><em>Editors Pick</em></strong>
       </h2>
       {% for post in editors_pick %} 
@@ -15,7 +15,7 @@
     </div>
 
     <div class="col-lg-4 mb-5">
-      <h2 class="text-purple">
+      <h2 class="text-green">
         <strong><em>Trending Posts</em></strong>
       </h2>
       {% for post in trending_posts %} 
@@ -25,7 +25,7 @@
 
 
     <div class="col-lg-4 mb-5">
-      <h2 class="text-purple">
+      <h2 class="text-green">
         <strong><em>Popular Post</em></strong>
       </h2>
       {% for post in popular_post %} 
