--- a/templates/includes/post-preview.html
+++ b/templates/includes/post-preview.html
@@ -1,6 +1,6 @@
 {% load static %}
 
-<article class="card">
+<article class="card m-1">
   {% if "placeholder" in post.featured_image.url %}
   <img
     class="card-img-top"
@@ -10,10 +10,10 @@
   {% else %}
   <img class="card-img-top" src=" {{ post.featured_image.url }}" />
   {% endif %}
-  <div class="card-body p-1">
+  <div class="card-body p-2">
     <h3 class="h4 mb-3">
       <strong class="text-uppercase"
-        ><a href="#"
+        ><a href="{% url 'post-detail' slug=post.slug %}"
           >{{post.title}}</a
         ></strong
       >
@@ -49,7 +49,7 @@
 
     <p class="mt-2">{{post.excerpt}}</p>
     <a
-      href="#"
+      href="{% url 'post-detail' slug=post.slug %}"
       class="btn btn-outline-primary"
       >Read More</a
     >
