--- a/templates/includes/post-snippet.html
+++ b/templates/includes/post-snippet.html
@@ -13,7 +13,7 @@
       {% endif %}
       <div class="ps-2">
         <h3 class="text-capitalize h6">
-          <a href="#"
+          <a href="{% url 'post-detail' slug=post.slug %}"
             ><strong>{{post.title}}</strong></a
           >
         </h3>
