--- a/templates/base.html
+++ b/templates/base.html
@@ -85,6 +85,12 @@
                 </ul>
               </div>
             </li>
+
+            {% if user.is_authenticated %}
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'add-post' %}">Add Post</a>
+            </li>
+            {% endif %}
           </ul>
 
           <ul class="navbar-nav mb-2 mb-lg-0">
