--- a/templates/profile.html
+++ b/templates/profile.html
@@ -76,6 +76,38 @@
   </div>
 </section>
 
+<section id="statistics" class="p-4">
+  <div class="card p-2">
+    <div class="row">
+      <div class="col-6 col-lg-3 text-center">
+        <h2>{{ total_posts }}</h2>
+        <p class="m-0px font-w-600">
+          <i class="fa-solid fa-file-lines text-warning"></i> Posts
+        </p>
+      </div>
 
+      <div class="col-6 col-lg-3 text-center">
+        <h2>{{ total_comments }}</h2>
+        <p class="m-0px font-w-600">
+          <i class="fa-solid fa-comments text-success"></i> Comments
+        </p>
+      </div>
+
+      <div class="col-6 col-lg-3 text-center">
+        <h2>{{ total_likes }}</h2>
+        <p class="m-0px font-w-600">
+          <i class="fa-solid fa-thumbs-up text-primary"></i> Likes
+        </p>
+      </div>
+
+      <div class="col-6 col-lg-3 text-center">
+        <h2>{{ favourites|length }}</h2>
+        <p class="m-0px font-w-600">
+          <i class="fa-solid fa-heart text-danger"></i> Favourites
+        </p>
+      </div>
+    </div>
+  </div>
+</section>
 
 {% endblock content %}
