--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %} {% block content %}
 
-<section class="p-lg-4">
+<section id="about" class="p-lg-4">
   <div class="row">
     <div class="col-md-4 mb-3">
       <div class="card">
@@ -107,6 +107,30 @@
         </p>
       </div>
     </div>
+  </div>
+</section>
+
+<section id="user-posts" class="p-4 text-center text-light">
+  <h2 class="text-capitalize">{{profile.username}}s Posts</h2>
+  <hr />
+
+  {% if posts_with_comment_count|length == 0 %}
+  <!--  -->
+
+  <p class="text-capitalize h4">
+    {{profile.username}} has no posts!
+    <i class="fa-solid fa-face-sad-tear"></i>
+  </p>
+  {% endif %}
+
+  <div class="row p-3">
+    <!--  -->
+    {% for post, comment_count in posts_with_comment_count %}
+    <div class="col-lg-3 col-md-6 g-3 mt-3 mb-3">
+      {% include "includes/post-preview.html" %}
+    </div>
+
+    {% endfor %}
   </div>
 </section>
 
