--- a/templates/includes/post-preview.html
+++ b/templates/includes/post-preview.html
@@ -13,7 +13,7 @@
   <div class="card-body p-2">
     <h3 class="h5 mb-3">
       <strong class="text-uppercase"
-        ><a  class='text-decoration-none' href="{% url 'post-detail' slug=post.slug %}"
+        ><a class='text-decoration-none' href="{% url 'post-detail' slug=post.slug %}"
           >{{post.title}}</a
         ></strong
       >
@@ -43,7 +43,7 @@
       </li>
       <li class="list-inline-item">
         <i class="fa-solid fa-comments text-success"></i>
-        {{ post.comment_count }}
+        {{ post.total_comments }}
       </li>
     </ul>
 
