--- a/templates/post-detail.html
+++ b/templates/post-detail.html
@@ -52,13 +52,8 @@
       <div class="body">
         <div class="row">
           <div class="col-lg-12">
-            {% for post in popular_posts %}
-            <a
-              class="text-decoration-none text-dark"
-              href="#"
-            >
+            {% for post in top_related_posts %}
             {% include "includes/post-preview.html" %}
-            </a>
             {% endfor %}
           </div>
         </div>
