--- a/templates/base.html
+++ b/templates/base.html
@@ -96,6 +96,14 @@
           <ul class="navbar-nav mb-2 mb-lg-0">
             {% if user.is_authenticated %}
             <li class="nav-item">
+              <a
+                class="nav-link"
+                href="{% url 'profile' user.username %}"
+                ><i class="fa-solid fa-user"></i> {{ user.username }}</a
+              >
+            </li>
+
+            <li class="nav-item">
               <a class="nav-link" href="{% url 'account_logout' %}">Logout</a>
             </li>
 
