--- a/templates/update_profile.html
+++ b/templates/update_profile.html
@@ -26,6 +26,14 @@
           <i class="fa-solid fa-unlock"></i>Update Bio
         </button>
       </form>
+
+      <h2>Change Your Password</h2>
+      <form method="post" class="mb-5">
+        {% csrf_token %} {{ password_form | crispy}}
+        <button class="btn btn-info" type="submit">
+          <i class="fa-solid fa-unlock"></i>Change Password
+        </button>
+      </form>
       {% endblock content %}
     </div>
   </div>
