--- a/templates/update_profile.html
+++ b/templates/update_profile.html
@@ -3,7 +3,7 @@
 {% block content %} 
 
 {% load crispy_forms_tags %}
-<section id="profile" class="container text-center text-dark p-4">
+<section id="profile" class="container text-center text-white p-4">
   <div class="row justify-content-center">
     <div class="col-12 col-md-6 p-5 bg-custom rounded-3">
       <h1>Edit Your User Information</h1>
