#23 Rendered post like form to post detail template

--- a/templates/post-detail.html
+++ b/templates/post-detail.html
@@ -40,6 +40,43 @@
             </div>
           </div>
 
+          <div class="d-flex align-items-center justify-content-center gap-2">
+      
+            <strong class="h3 m-0">
+              {% if user.is_authenticated %}
+              <form
+                class="d-inline"
+                action="{% url 'post_like' post.slug %}"
+                method="POST"
+              >
+                {% csrf_token %} {% if liked %}
+                <button
+                  type="submit"
+                  name="blogpost_id"
+                  value="{{post.slug}}"
+                  class="btn-like"
+                >
+                  <i class="fa-solid fa-thumbs-up text-primary"></i>
+                </button>
+                {% else %}
+                <button
+                  type="submit"
+                  name="blogpost_id"
+                  value="{{post.slug}}"
+                  class="btn-like text-primary"
+                >
+                  <i class="fa-regular fa-thumbs-up"></i>
+                </button>
+                {% endif %}
+              </form>
+
+              {% else %}
+              <span class="text-secondary"><i class="far fa-heart"></i></span>
+              {% endif %}
+              <!-- The number of likes goes before the closing strong tag -->
+              <span class="text-secondary">{{ post.number_of_likes }} </span>
+            </strong>
+          </div>
         </div>
         <hr />
         <div class="mt-2 mb-2">{{ post.content | safe }}</div>
