--- a/templates/profile.html
+++ b/templates/profile.html
@@ -134,5 +134,29 @@
   </div>
 </section>
 
+<section id="favourites" class="p-4 text-center text-light">
+  <h2 class="text-capitalize">Favourites</h2>
+  <hr />
 
+  <div class="row p-3">
+    <!--  -->
+
+    {% if favourites|length == 0 %}
+    <!--  -->
+
+    <p class="text-capitalize h4">
+      {{profile.username}} has no favourites!
+      <i class="fa-solid fa-face-sad-tear"></i>
+    </p>
+    {% endif %}
+    <!--  -->
+
+    {% for post in favourites %}
+    <div class="col-lg-3 col-md-6 g-3 mt-3 mb-3">
+      {% include "includes/post-preview.html" %}
+    </div>
+
+    {% endfor %}
+  </div>
+</section>
 {% endblock content %}
