--- a/templates/includes/post-preview.html
+++ b/templates/includes/post-preview.html
@@ -54,7 +54,7 @@
       >Read More</a
     >
     {% if user.is_authenticated and user.id == post.author.id %}
-    <a href="{% url 'edit_post' pk=post.pk %}" class="btn btn-primary"
+    <a href="{% url 'edit_post' slug=post.slug %}" class="btn btn-primary"
       ><i class="fa-solid fa-pen-to-square"></i>Edit</a
     >
     {% endif %}
