--- a/templates/edit_post.html
+++ b/templates/edit_post.html
@@ -13,9 +13,10 @@
     {{ form | crispy }}
     <!--  -->
     {% csrf_token %}
-    
     <button type="submit" class="btn btn-primary">Submit</button>
-  </form>
+
+    {% include "includes/modal.html" %}
+</form>
 </div>
 
 <!--  -->
