#15 Updated comments looping to posts for delete modal reuse

--- a/templates/includes/comment.html
+++ b/templates/includes/comment.html
@@ -9,8 +9,8 @@
     </div>
   </div>
   <div class="text-box col-md-10 col-8">
-    <h5 class="m-b-0 text-capitalize">{{comment.name}}</h5>
-    <p>{{comment.body | linebreaks}}</p>
-    <label class="list-inline text-primary"> {{comment.created_on}} </label>
+    <h5 class="m-b-0 text-capitalize">{{post.name}}</h5>
+    <p>{{post.body | linebreaks}}</p>
+    <label class="list-inline text-primary"> {{post.created_on}} </label>
   </div>
 </li>
