--- a/templates/post-detail.html
+++ b/templates/post-detail.html
@@ -95,7 +95,7 @@
       <hr />
       <div class="body">
         <ul class="comment-reply list-unstyled">
-          {% for comment in comments %}
+          {% for post in comments %}
           <!--  -->
           {% include "includes/comment.html" %}
           {% endfor %}
