--- a/templates/post-detail.html
+++ b/templates/post-detail.html
@@ -38,9 +38,15 @@
               </label>
               <span class="text-secondary">{{post.created_on}}</span>
             </div>
+            
           </div>
 
           <div class="d-flex align-items-center justify-content-center gap-2">
+            {% if user.is_authenticated and user.id == post.author.id %}
+            <a href="{% url 'edit_post' slug=post.slug %}" class="btn btn-primary"
+              ><i class="fa-solid fa-pen-to-square"></i>Edit</a
+            >
+            {% endif %}
       
             <strong class="h3 m-0">
               {% if user.is_authenticated %}
