#34 Added banner style to base.html

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -39,3 +39,13 @@ img {
 .text-green {
   color: var(--neon-green);
 }
+
+/* BANNER */
+.banner-border {
+  position: absolute;
+  top: 180px;
+  left: 0;
+  width: 100%;
+  stroke: var(--neon-green);
+  z-index: -1;
+}
