--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -40,6 +40,37 @@ img {
   color: var(--neon-green);
 }
 
+/* NAVIGATION */
+.nav-link {
+  position: relative;
+  text-transform: capitalize;
+}
+
+.dropdown button {
+  border: none;
+  background: inherit;
+}
+
+.nav-link {
+  width: fit-content !important;
+}
+
+.nav-link::after {
+  content: "";
+  transition: all 450ms;
+  opacity: 0;
+  height: 2px;
+  width: 100%;
+  background-color: var(--neon-green);
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
+
+.nav-link:hover::after {
+  opacity: 1;
+}
+
 /* BANNER */
 .banner-border {
   position: absolute;
