--- a/templates/category.html
+++ b/templates/category.html
@@ -4,7 +4,7 @@
 
 <div class="container pt-5 text-center">
   <h1 class="article-title">
-    <strong>{{category.title}}</strong>
+    <strong class='text-uppercase text-green'>{{category.title}}</strong>
   </h1>
   <h2 class="mt-5 text-light border-bottom">
     <em>Uncover the latest {{category.title}} updates!</em>
