--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -100,3 +100,20 @@ img {
   stroke: var(--neon-green);
   z-index: -1;
 }
+
+/* PROFILE */
+.fa-trophy {
+  font-size: 3rem;
+}
+
+/* COMMENTS */
+
+.user-icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: aliceblue;
+  border-radius: 100%;
+  height: 100%;
+  background: linear-gradient(270deg, #000000, #434343);
+}
