--- a/templates/includes/comment.html
+++ b/templates/includes/comment.html
@@ -1,11 +1,12 @@
 {% load static %}
 
 <li class="row clearfix">
-  <div class="icon-box col-md-2 col-4">
+  <div class="col-md-2 col-4">
     <div
-      class="h-100 d-flex justify-content-center align-items-center border border-dark rounded-3 bg-primary"
+      class="user-icon"
     >
-      <i style="font-size: 4rem" class="fa-solid fa-trophy gold"></i>
+    {% include 'includes/level.html' with level=post.name.profile.get_level %}
+
     </div>
   </div>
   <div class="text-box col-md-10 col-8">
