--- a/templates/home.html
+++ b/templates/home.html
@@ -4,6 +4,28 @@
 <!--  -->
 
 <div class="container pt-5 text-center">
+
+
+  <h1 class="heading mb-2 text-light">
+    What Would You <br />
+    Like To Read Today?
+  </h1>
+  <ul class="list-inline widget-list-inline">
+    <li class="list-inline-item m-1">
+      <a href="{% url 'index' 'tech'   %}">Tech</a>
+    </li>
+    <li class="list-inline-item m-1">
+      <a href="{% url 'index' 'coding'  %}">Coding</a>
+    </li>
+    <li class="list-inline-item m-1">
+      <a href="{% url 'index' 'gadgets'  %}">Gadgets</a>
+    </li>
+    <li class="list-inline-item m-1">
+      <a href="{% url 'index' 'events'  %}">Events</a>
+    </li>
+  </ul>
+
+
   <div class="row pt-md-5">
     <div class="col-lg-4 mb-5">
       <h2 class="text-green">
