--- a/templates/post-detail.html
+++ b/templates/post-detail.html
@@ -19,7 +19,7 @@
           {% endif %}
         </div>
         <h6
-          class="text-uppercase text-primary fw-bolder mt-1 text-decoration-underline text-capitalize"
+          class="tag bg-purple p-1 text-uppercase fw-bold text-light"
         >
           {{post.category}}
         </h6>
