#36 Added styling to home page listing titles

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -64,6 +64,10 @@ img {
   background: var(--neon-purple);
 }
 
+.bg-green {
+  background: var(--neon-green);
+}
+
 /* NAVIGATION */
 .nav-link {
   position: relative;
