--- a/templates/home.html
+++ b/templates/home.html
@@ -28,7 +28,7 @@
 
   <div class="row pt-md-5">
     <div class="col-lg-4 mb-5">
-      <h2 class="text-green">
+      <h2 class="bg-green rounded-3 text-white">
         <strong><em>Editors Pick</em></strong>
       </h2>
       {% for post in editors_pick %} 
@@ -37,7 +37,7 @@
     </div>
 
     <div class="col-lg-4 mb-5">
-      <h2 class="text-green">
+      <h2 class="bg-green rounded-3 text-white">
         <strong><em>Trending Posts</em></strong>
       </h2>
       {% for post in trending_posts %} 
@@ -47,7 +47,7 @@
 
 
     <div class="col-lg-4 mb-5">
-      <h2 class="text-green">
+      <h2 class="bg-green rounded-3 text-white">
         <strong><em>Popular Post</em></strong>
       </h2>
       {% for post in popular_post %} 
