--- a/templates/home.html
+++ b/templates/home.html
@@ -3,7 +3,7 @@
 {% block content %}
 <!--  -->
 
-<div class="container pt-5 text-center">
+<div class="pt-3 text-center">
 
 
   <h1 class="heading mb-2 text-light">
