#37 Fixed summernote content editor resposive bug with settings.py config

--- a/templates/add_post.html
+++ b/templates/add_post.html
@@ -10,7 +10,7 @@
   <form
     method="post"
     enctype="multipart/form-data"
-    class='add-post p-4 rounded-2 shadow-lg bg-light'
+    class='add-post p-lg-4 p-2 pt-4 rounded-2 shadow-lg bg-light text-center text-uppercase my-3'
   >
     {{ form | crispy }}
     <!--  -->
