--- a/templates/includes/post-preview.html
+++ b/templates/includes/post-preview.html
@@ -1,6 +1,6 @@
 {% load static %}
 
-<article class="card m-1 text-dark">
+<article class="card m-1 text-dark fade-in">
   {% if "placeholder" in post.featured_image.url %}
   <img
     class="card-img-top"
