--- a/templates/includes/post-snippet.html
+++ b/templates/includes/post-snippet.html
@@ -1,6 +1,6 @@
 {% load static %}
 
-<article class="card mb-4 text-start">
+<article class="card mb-4 text-start fade-in">
     <div class="d-flex p-2">
       {% if "placeholder" in post.featured_image.url %}
       <img
