--- a/templates/update_profile.html
+++ b/templates/update_profile.html
@@ -6,7 +6,7 @@
 <section id="profile" class="container text-center text-white p-4">
 
     <h1 class='display-5 text-green fw-bolder'>Edit Your User Information</h1>
-    <div class="add-post p-lg-4 p-2 pt-4 rounded-2 shadow-lg bg-light text-center my-3">
+    <div class="custom-form p-lg-4 p-2 pt-4 rounded-2 shadow-lg bg-light text-center my-3">
       <hr />
       <form method="post" class="mb-5">
         {% csrf_token %}
