--- a/templates/profile.html
+++ b/templates/profile.html
@@ -161,12 +161,12 @@
           {% endif %}
         </ul>
       </nav>
-</section>
+</section> 
 
 <section id="favourites" class="text-center">
   <div class="row p-3">
     <h2 class='text-green fw-bolder display-6'>
-      <strong class='text-uppercase text-green'> {{profile.username}}'s Favourites</strong>
+      <strong class='text-uppercase text-green'> {{profile.username}}'s Posts</strong>
     </h2>
 
       {% for post in favourites_page %}
@@ -176,14 +176,15 @@
       {% endfor %}
   </div>
   <!-- Pagination controls for favorite posts -->
+  {% if favourites_page.has_other_pages %}
   <nav aria-label="Page navigation">
     <ul class="pagination justify-content-center">
       {% if favourites_page.has_previous %}
       <li class="page-item">
-        <a href="?page=1" class="page-link">&laquo; First</a>
+        <a href="?favourites_page=1" class="page-link">&laquo; First</a>
       </li>
       <li class="page-item">
-        <a href="?page={{ favourites_page.previous_page_number }}" class="page-link"
+        <a href="?favourites_page={{ favourites_page.previous_page_number }}" class="page-link"
           >&lt; Previous</a
         >
       </li>
@@ -194,22 +195,23 @@
       <li
         class="page-item{% if page_num == favourites_page.number %} active{% endif %}"
       >
-        <a href="?page={{ page_num }}" class="page-link">{{ page_num }}</a>
+        <a href="?favourites_page={{ page_num }}" class="page-link">{{ page_num }}</a>
       </li>
       {% endfor %} {% if favourites_page.has_next %}
       <li class="page-item">
-        <a href="?page={{ favourites_page.next_page_number }}" class="page-link"
+        <a href="?favourites_page={{ favourites_page.next_page_number }}" class="page-link"
           >Next &gt;</a
         >
       </li>
       <li class="page-item">
-        <a href="?page={{ favourites_page.paginator.num_pages }}" class="page-link"
+        <a href="?favourites_page={{ favourites_page.paginator.num_pages }}" class="page-link"
           >Last &raquo;</a
         >
       </li>
       {% endif %}
     </ul>
   </nav>
+  {% endif %}
 
 </section>
 {% endblock content %}
